add test and github action

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,12 @@
 [runner]
 enforceSerializableSessionState = true
+
+[browser]
+gatherUsageStats = false
+
+[theme]
+primaryColor = "#268bd2"
+backgroundColor = "#fdf6e3"
+secondaryBackgroundColor = "#eee8d5"
+textColor = "#657b83"
+font = "serif"
